; ModuleID = '/home/carl/AnghaBench/systemd/src/journal/extr_fsprg.c_mpi_export.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal/extr_fsprg.c_mpi_export.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GCRYMPI_FMT_USG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i32)* @mpi_export to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mpi_export(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i64 @gcry_mpi_cmp_ui(i32 %9, i32 0)
  %11 = icmp sge i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @gcry_mpi_get_nbits(i32 %14)
  %16 = add nsw i32 %15, 7
  %17 = sdiv i32 %16, 8
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %7, align 4
  %19 = zext i32 %18 to i64
  %20 = load i64, i64* %5, align 8
  %21 = icmp ule i64 %19, %20
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  %24 = load i8*, i8** %4, align 8
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @memzero(i8* %24, i64 %25)
  %27 = load i32, i32* @GCRYMPI_FMT_USG, align 4
  %28 = load i8*, i8** %4, align 8
  %29 = load i64, i64* %5, align 8
  %30 = load i32, i32* %7, align 4
  %31 = zext i32 %30 to i64
  %32 = sub i64 %29, %31
  %33 = getelementptr i8, i8* %28, i64 %32
  %34 = load i32, i32* %7, align 4
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @gcry_mpi_print(i32 %27, i8* %33, i32 %34, i64* %8, i32 %35)
  %37 = load i64, i64* %8, align 8
  %38 = load i32, i32* %7, align 4
  %39 = zext i32 %38 to i64
  %40 = icmp eq i64 %37, %39
  %41 = zext i1 %40 to i32
  %42 = call i32 @assert(i32 %41)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @gcry_mpi_cmp_ui(i32, i32) #1

declare dso_local i32 @gcry_mpi_get_nbits(i32) #1

declare dso_local i32 @memzero(i8*, i64) #1

declare dso_local i32 @gcry_mpi_print(i32, i8*, i32, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
